--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
         "@vitejs/plugin-vue": "^5.2.3",
+        "loadash": "^1.0.0",
         "vue": "^3.5.13"
     }
 }
